--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Test Dumbways</title>
-        <script src="js/Soal1.js"></script>
+        <script src="Soal2.js"></script>
 </head>
 <body>
-    <p>JAWABAN SOAL NOMOR 1</p>
+    <p>JAWABAN SOAL NOMOR 2</p>
 </body>
 </html>
